--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
   "devDependencies": {
     "@types/node": "^14.14.9",
     "@types/react": "^17.0.0",
-    "autoprefixer": "^10.0.2",
-    "postcss-import": "^13.0.0",
-    "tailwindcss": "^2.0.1",
+    "autoprefixer": "9",
+    "postcss": "7",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "typescript": "^4.1.2"
   }
 }
