--- a/package.json
+++ b/package.json
@@ -1,24 +1,62 @@
 {
   "name": "neet.club",
-  "version": "0.1.0",
-  "private": true,
+  "version": "1.0.0",
+  "description": "https://www.neet.club",
+  "main": "index.js",
   "scripts": {
-    "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "deploy": "next build && next export"
+    "dev": "next",
+    "start": "next start"
   },
   "dependencies": {
-    "next": "10.0.8",
-    "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "@mapbox/rehype-prism": "0.6.0",
+    "@mdx-js/loader": "1.6.22",
+    "@mdx-js/react": "1.6.22",
+    "@next/mdx": "10.0.9",
+    "@tailwindcss/typography": "^0.4.0",
+    "autoprefixer": "^10.2.5",
+    "big.js": "6.0.3",
+    "comma-number": "2.0.1",
+    "date-fns": "2.19.0",
+    "gray-matter": "4.0.2",
+    "mdx-prism": "0.3.3",
+    "next": "10.0.9",
+    "next-mdx-remote": "^2.1.3",
+    "next-themes": "^0.0.14",
+    "postcss": "^8.2.8",
+    "preact": "^10.5.13",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-tweet-embed": "1.2.2",
+    "reading-time": "1.3.0",
+    "remark-autolink-headings": "6.0.1",
+    "remark-code-titles": "0.1.1",
+    "remark-slug": "6.0.0",
+    "swr": "0.5.4",
+    "tailwindcss": "^2.0.4"
   },
   "devDependencies": {
-    "@types/node": "^14.14.9",
-    "@types/react": "^17.0.0",
-    "autoprefixer": "9",
-    "postcss": "7",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
-    "typescript": "^4.1.2"
-  }
+    "@tailwindcss/jit": "^0.1.8",
+    "globby": "11.0.3",
+    "image-size": "0.9.7",
+    "prettier": "2.2.1",
+    "rehype": "11.0.0",
+    "remark-frontmatter": "3.0.0",
+    "remark-parse": "9.0.0",
+    "remark-stringify": "9.0.1",
+    "rss": "1.2.2",
+    "unified": "9.2.1",
+    "unist-util-visit": "2.0.3"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/JohnTitor/neet.club.git"
+  },
+  "keywords": [],
+  "author": "Yuki Okushi",
+  "license": "(MIT OR Apache-2.0)",
+  "bugs": {
+    "url": "https://github.com/JohnTitor/neet.club/issues"
+  },
+  "homepage": "https://github.com/JohnTitor/neet.club#readme"
 }
