--- a/jsconfig.json
+++ b/jsconfig.json
@@ -7,5 +7,6 @@
       "@/lib/*": ["lib/*"],
       "@/styles/*": ["styles/*"]
     }
-  }
+  },
+  "exclude": [".next", ".vercel", "node_modules", "out"]
 }
