--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "neet.club",
+  "name": "2k36.org",
   "version": "1.0.0",
-  "description": "https://www.neet.club",
+  "description": "https://www.2k36.org",
   "main": "index.js",
   "scripts": {
     "build": "next build",
@@ -46,13 +46,13 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/JohnTitor/neet.club.git"
+    "url": "git+https://github.com/JohnTitor/2k36.org.git"
   },
   "keywords": [],
   "author": "Yuki Okushi",
   "license": "(MIT OR Apache-2.0)",
   "bugs": {
-    "url": "https://github.com/JohnTitor/neet.club/issues"
+    "url": "https://github.com/JohnTitor/2k36.org/issues"
   },
-  "homepage": "https://github.com/JohnTitor/neet.club#readme"
+  "homepage": "https://github.com/JohnTitor/2k36.org#readme"
 }
