--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
     "build": "next build",
     "dev": "next",
     "start": "next start",
-    "format": "prettier --write \"./**/*.js\""
+    "lint": "run-p -l -c --aggregate-output lint:*",
+    "lint:eslint": "eslint .",
+    "lint:prettier": "prettier --check .",
+    "fix": "run-s fix:prettier fix:eslint",
+    "fix:eslint": "npm run lint:eslint -- --fix",
+    "fix:prettier": "npm run lint:prettier -- --write"
   },
   "dependencies": {
     "@mapbox/rehype-prism": "0.6.0",
@@ -34,8 +39,14 @@
   },
   "devDependencies": {
     "@tailwindcss/jit": "^0.1.18",
+    "eslint": "^7.23.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-react": "^7.23.1",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
     "globby": "11.0.3",
     "image-size": "0.9.7",
+    "npm-run-all": "^4.1.5",
     "prettier": "2.2.1",
     "rehype": "11.0.0",
     "remark-frontmatter": "3.0.0",
