--- a/.eslintrc
+++ b/.eslintrc
@@ -37,5 +37,13 @@
         "html": true
       }
     ]
+  },
+  "parserOptions": {
+    "sourceType": "module"
+  },
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
   }
 }
