--- a/.github/workflows/report-reminder.yml
+++ b/.github/workflows/report-reminder.yml
@@ -2,8 +2,8 @@ name: Create an issue for contribution report
 
 on:
   schedule:
-    # Run at noon UTC every 1st of the month
-    - cron: '00 12 01 * *'
+    # Run at 00:00 UTC every 1st of the month
+    - cron: '00 00 01 * *'
   # Allow manually starting the workflow
   workflow_dispatch:
 
