--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,6 @@
 {
   "plugins": ["simple-import-sort", "import"],
-  "extends": ["eslint:recommended", "plugin:react/recommended", "prettier"],
+  "extends": ["eslint:recommended", "plugin:react/recommended", "prettier", "plugin:@next/next/recommended"],
   "env": {
     "es2021": true,
     "browser": true,
