--- a/package.json
+++ b/package.json
@@ -18,13 +18,14 @@
     "@mapbox/rehype-prism": "0.6.0",
     "@mdx-js/loader": "1.6.22",
     "@mdx-js/react": "1.6.22",
-    "@next/mdx": "10.2.3",
+    "@next/mdx": "11.0.1",
     "@tailwindcss/typography": "^0.4.0",
     "autoprefixer": "^10.2.5",
     "date-fns": "2.22.1",
+    "eslint-config-next": "^11.0.1",
     "gray-matter": "4.0.3",
     "mdx-prism": "0.3.3",
-    "next": "10.2.3",
+    "next": "11.0.1",
     "next-mdx-remote": "^3.0.2",
     "next-themes": "^0.0.15",
     "postcss": "^8.3.5",
