--- a/package.json
+++ b/package.json
@@ -50,9 +50,9 @@
     "npm-run-all": "^4.1.5",
     "prettier": "2.3.2",
     "rehype": "12.0.0",
-    "remark-frontmatter": "3.0.0",
-    "remark-parse": "9.0.0",
-    "remark-stringify": "9.0.1",
+    "remark-frontmatter": "^4.0.0",
+    "remark-parse": "^10.0.0",
+    "remark-stringify": "^10.0.0",
     "rss": "1.2.2",
     "unist-util-visit": "4.0.0"
   },
