--- a/package.json
+++ b/package.json
@@ -25,13 +25,13 @@
     "eslint-config-next": "^12.1.5",
     "gray-matter": "4.0.3",
     "mdx-prism": "0.3.4",
-    "next": "12.1.5",
+    "next": "^12.1.6",
     "next-mdx-remote": "^4.0.3",
     "next-themes": "^0.1.1",
     "postcss": "^8.4.12",
     "preact": "^10.7.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
     "reading-time": "1.5.0",
     "remark-autolink-headings": "6.1.0",
     "remark-code-titles": "0.1.2",
