--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,9 @@ jobs:
       - name: Setup node
         uses: actions/setup-node@v2
         with:
-          node-version: '14'
+          node-version: '16'
       - run: yarn
       - run: yarn run lint
       - run: yarn build
+      - run: terraform init && terraform plan && terraform apply -auto-approve
+        if: github.ref == 'refs/heads/main'
