--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,3 +20,5 @@ jobs:
       - run: yarn build
       - run: terraform init && terraform plan && terraform apply -auto-approve
         if: github.ref == 'refs/heads/main'
+        env:
+          VERCEL_API_TOKEN: ${{ secrets.VERCEL_API_TOKEN }}
