--- a/.github/workflows/sponsors.yml
+++ b/.github/workflows/sponsors.yml
@@ -22,16 +22,17 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Check diff
+        id: diff
         continue-on-error: true
         run: |
           git add .
           git diff --name-only --exit-code
 
       - run: yarn fix:prettier
-        if: steps.diff.outcome == 'failure'
+        if: ${{ steps.diff.outcome == 'failure' }}
 
       - name: Commit and push changes
-        if: steps.diff.outcome == 'failure'
+        if: ${{ steps.diff.outcome == 'failure' }}
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
