--- a/.github/workflows/sponsors.yml
+++ b/.github/workflows/sponsors.yml
@@ -26,6 +26,15 @@ jobs:
         continue-on-error: true
         run: git diff --name-only --exit-code
 
+      - name: Setup node
+        uses: actions/setup-node@v3
+        if: ${{ steps.diff.outcome == 'failure' }}
+        with:
+          node-version: '16'
+
+      - run: yarn
+        if: ${{ steps.diff.outcome == 'failure' }}
+
       - run: yarn fix:prettier
         if: ${{ steps.diff.outcome == 'failure' }}
 
