--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "start": "next start",
     "lint": "run-p -l -c --aggregate-output lint:*",
     "lint:eslint": "eslint .",
-    "lint:prettier": "prettier --cache --check .",
+    "lint:prettier": "prettier --check .",
     "fix": "run-s fix:prettier fix:eslint",
-    "fix:eslint": "npm run lint:eslint -- --fix",
-    "fix:prettier": "npm run lint:prettier -- --write"
+    "fix:eslint": "yarn run lint:eslint -- --fix",
+    "fix:prettier": "yarn run lint:prettier -- --write"
   },
   "dependencies": {
     "@mapbox/rehype-prism": "0.8.0",
