--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -14,6 +14,8 @@ jobs:
         with:
           fetch-depth: 0
       - name: test
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           touch foo.md
           git config --global user.name "bot"
