--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -24,5 +24,6 @@ jobs:
           git add -N .
           git add -A
           git commit -m "add foo.md"
+          git push -u origin foobar
           body="generated\ntrigger commit: ${{ env.GITHUB_SHA }}"
           gh pr create --title "add foo.md" --body="${body}"
