--- a/package.json
+++ b/package.json
@@ -18,18 +18,17 @@
     "@mapbox/rehype-prism": "0.8.0",
     "@mdx-js/loader": "2.1.2",
     "@mdx-js/react": "2.1.2",
-    "@next/mdx": "12.2.0",
+    "@next/mdx": "12.2.3",
     "@tailwindcss/typography": "^0.5.4",
     "autoprefixer": "^10.4.7",
     "date-fns": "2.29.1",
-    "eslint-config-next": "^12.2.0",
+    "eslint-config-next": "12.2.3",
     "gray-matter": "4.0.3",
     "mdx-prism": "0.3.4",
-    "next": "12.2.0",
+    "next": "12.2.3",
     "next-mdx-remote": "^4.1.0",
     "next-themes": "^0.2.0",
     "postcss": "^8.4.14",
-    "preact": "^10.10.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "reading-time": "1.5.0",
