--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "@tailwindcss/typography": "^0.5.4",
     "autoprefixer": "^10.4.7",
     "date-fns": "2.29.1",
-    "eslint-config-next": "12.2.3",
     "gray-matter": "4.0.3",
     "mdx-prism": "0.3.4",
     "next": "12.2.3",
@@ -39,6 +38,7 @@
   },
   "devDependencies": {
     "eslint": "^8.20.0",
+    "eslint-config-next": "^12.2.3",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-react": "^7.30.1",
