--- a/.github/workflows/sponsors.yml
+++ b/.github/workflows/sponsors.yml
@@ -25,8 +25,9 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '16'
+          cache: 'yarn'
 
-      - run: yarn
+      - run: yarn --frozen-lockfile
 
       - run: yarn fix:prettier
 
